Fix: memory parameters for Travis build are back